[tool.poetry]
name = "graphene-chain-mutation"
version = "0.1.0"
description = ""
authors = ["Josuah Aron <josuaharon@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphene = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
