[metadata]
name = graphene-chain-mutation
version = 1.0.4
description = Provide feature to reference previous mutations results in chained mutations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shinhermit/graphene-chain-mutation
author = Josuah ARON
author_email = josuah.aron@cogitans.fr
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    graphene>=2.1.8
